kubernetes/otel-demo/templates/frontendproxy/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontendproxy-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    #alb.ingress.kubernetes.io/group.name: eks-apps
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    kubernetes.io/ingress.class: alb
    external-dns.alpha.kubernetes.io/hostname: frontend.jayavardhanreddy616.xyz
spec:
  rules:
    - host: jayavardhanreddy    
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontendproxy
                port:
                  number: 80
